# HH_coursework

./: README.md  main.py  pyproject.toml
src/: actions_vacancies.py  api_hh.py  save_vacancies.py  user_input.py  work_vacancies.py
